kubia-liveliness.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-liveliness
spec:
  containers:
  - image: luksa/kubia-unhealthy
    name: kubia
    livenessProbe:
      httpGet:
        path: /
        port: 8080
      initialDelaySeconds: 15
