endpoints.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service
subsets:
  - addresses:
    - ip: 11.11.11.11
    - ip: 12.12.12.12
    ports:
    - port: 8080
