headless.yml
apiVersion: v1
kind: Service
metadata:
  name: headless
spec:
  clusterIP: None
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: nginx
